--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta property="og:url" content="URL OF THE WEBSITE"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/image/your_banner_image.png" />
-  <meta property="og:image:width" content="600"/>
-  <meta property="og:image:height" content="315"/>
+  <meta property="og:image:width" content="1200"/>
+  <meta property="og:image:height" content="630"/>
 
 
   <meta name="twitter:title" content="TWITTER BANNER TITLE META TAG">
@@ -52,7 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Did hominins control hammer strike angles when knapping?</h1>
+            <h1 class="title is-1 publication-title">Something, something, Dark Side</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
