--- a/index.html
+++ b/index.html
@@ -56,12 +56,10 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://www.icarehb.com/lli/" target="_blank">Li Li</a><sup>*</sup>,</span>
+                <a href="https://www.icarehb.com/lli/" target="_blank">Darth Vader</a><sup>*</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a>,</span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Emperor Palpatine</a>
+                </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
