--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://www.icarehb.com/lli/" target="_blank">Darth Vader</a><sup>*</sup>,</span>
+                <a href="https://www.icarehb.com/lli/" target="_blank">Darth Vader</a><sup>*</sup>and</span>
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Emperor Palpatine</a>
                 </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">ICArEHB<br>Annual Meeting of the Paleoanthropology Society 2023</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding Author</small></span>
+                    <span class="author-block">Dark Side of the Force<br>Annual Meeting of the Sith Lords</span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>AKA Anakin Skywalker</small></span>
                   </div>
 
                   <div class="column has-text-centered">
