--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
-                        <span>Paper</span>
+                        <span>Death Star plans</span>
                       </a>
                     </span>
 
@@ -87,7 +87,7 @@
                       <span class="icon">
                         <i class="fas fa-file-pdf"></i>
                       </span>
-                      <span>Supplementary</span>
+                      <span>Lightsaber schematics</span>
                     </a>
                   </span>
 
@@ -98,7 +98,7 @@
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                    <span>Obi-Wan sucks!</span>
                   </a>
                 </span>
 
@@ -107,7 +107,7 @@
                   <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                    <i class="ai ai-arxiv"></i>
+                    <i class="Dark Side has cookies"></i>
                   </span>
                   <span>arXiv</span>
                 </a>
