--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://www.icarehb.com/lli/" target="_blank">Darth Vader</a><sup>*</sup>and</span>
+                <a href="https://en.wikipedia.org/wiki/Darth_Vader" target="_blank">Darth Vader</a><sup>*</sup>and</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Emperor Palpatine</a>
+                  <a href="https://en.wikipedia.org/wiki/Palpatine" target="_blank">Emperor Palpatine</a>
                 </span>
                   </div>
 
