--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                   <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                    <i class="Dark Side has cookies"></i>
+                    <i class="ArXiv"></i>
                   </span>
-                  <span>arXiv</span>
+                  <span>Dark Side has cookies</span>
                 </a>
               </span>
             </div>
