--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
   <script src="static/js/bulma-carousel.min.js"></script>
   <script src="static/js/bulma-slider.min.js"></script>
   <script src="static/js/index.js"></script>
+  <style>
+    body {
+        background-color: black;
+        color: white;
+    }
+</style>
+
 </head>
 <body>
 
