--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         background-color: black;
         color: white;
     }
+    .publication-title {
+    color: white !important;
+}
+
 </style>
 
 </head>
