--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                        <a href="https://static.wikia.nocookie.net/starwars/images/3/3f/Deathstar_blueprint.jpg/revision/latest?cb=20090224141145" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -104,7 +104,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                    <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQuKxnXF20ZCx4oPb3RgaE9vffMU0p_eCDdqOPybq6NeT9nJ_Adio8rOdaThnuj1vBPlI&usqp=CAU" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -115,7 +115,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                  <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoPsc_P4llnjPMm4Zj039vn2sh0BY1qpVNVw&s" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ArXiv"></i>
